result css update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,3 +58,12 @@
 h1 {
     font-family: OldeEnglish, sans-serif;
 }
+
+.card-body a {
+    color: black;
+}
+
+.card-body a:hover {
+    text-decoration: unset;
+    color: #233257;
+}
