--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
     src: url('../fonts/OldeEnglish.ttf');
 }
 
+p {
+    font-size: 16px;
+}
+
 .form {
     margin-bottom: 8px;
 }
@@ -13,26 +17,26 @@
 
 .jumbotron {
     color: white;
-    background-color: #233257;
+    background-color: #1a1a1a;
     text-align: center;
 }
 
 .blueBg {
     color: white;
-    background-color: #233257;
+    background-color: #1a1a1a;
     text-align: center;
 }
 
 .form-header {
     color: white;
-    background-color: #233257;
+    background-color: #1a1a1a;
     padding: 5px;
 }
 
 .form {
     border: 1px;
     border-style: solid;
-    border-color: #233257;
+    border-color: #1a1a1a;
     margin-bottom: 8px;
     border-top: none;
 }
@@ -48,7 +52,7 @@
 
 .card-header {
     color: white;
-    background-color: #233257;
+    background-color: #1a1a1a;
 }
 
 #button {
@@ -65,5 +69,13 @@ h1 {
 
 .card-body a:hover {
     text-decoration: unset;
-    color: #233257;
+    color: #5e5e5e;
+}
+
+.btn:focus {
+    box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.23);
+}
+
+hr {
+    width: 97%;
 }
